backends/k8s/cogserver/yaml/cogserver-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: titiler
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: titiler
  namespace: titiler
spec:
  serviceName: "titiler"
  replicas: 2
  selector:
    matchLabels:
      app: titiler
  template:
    metadata:
      labels:
        app: titiler
    spec:
      nodeSelector:
        type: "manual"
      containers:
        - name: titiler
          image: ghcr.io/undp-data/cogserver:v0.4.0
          #image: undpgeohub.azurecr.io/cogserver-debug
          imagePullPolicy: Always
          resources:
            limits:
              memory: "7G"
              cpu: "2000m"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: titiler
  namespace: titiler
  labels:
    app: titiler
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: titiler
  type: ClusterIP # LoadBalancer # NodePort #
  ## load balancer will make the service accessible on the internet using an external ip but no https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titiler-ssl-tls-ingress
  namespace: titiler
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    cert-manager.io/cluster-issuer: zerossl
spec:
  #ingressClassName: addon-http-application-routing
  tls:
    - hosts:
        - titiler.undpgeohub.org # update IP address here
      secretName: titiler-cert
  rules:
    - host: titiler.undpgeohub.org # update IP address here
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: titiler
                port:
                  number: 80
