backends/k8s/cogserver/yaml/cogserver-dev-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: titiler-dev
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: titiler-dev
  namespace: titiler-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titiler-dev
  template:
    metadata:
      labels:
        app: titiler-dev
    spec:
      nodeSelector:
        type: "manual"
      containers:
        - name: titiler-dev
          image: ghcr.io/undp-data/cogserver:v0.6.0
          #image: undpgeohub.azurecr.io/cogserver-debug
          imagePullPolicy: Always
          resources:
            limits:
              memory: "7G"
              cpu: "2000m"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: titiler-dev
  namespace: titiler-dev
  labels:
    app: titiler-dev
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: titiler-dev
  type: ClusterIP # LoadBalancer # NodePort #
  ## load balancer will make the service accessible on the internet using an external ip but no https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titiler-dev-ssl-tls-ingress
  namespace: titiler-dev
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  #ingressClassName: addon-http-application-routing
  tls:
    - hosts:
        - titiler-dev.undpgeohub.org # update IP address here
      secretName: titiler-dev-cert
  rules:
    - host: titiler-dev.undpgeohub.org # update IP address here
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: titiler-dev
                port:
                  number: 80
